--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BLEconnection</string>
     <string name="title_activity_maps2">Map</string>
+    <string name="edittext_hint_search">Search Room</string>
+    <string name="button_searchtext">Search</string>
 </resources>
