--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,10 @@
     <string name="edittext_hint_search">Search Room</string>
     <string name="button_searchtext">Search here</string>
     <string name="button_back">back</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="text_showmylocation">My Location</string>
+    <string name="text_shownavigation">Navigation</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_indoor_plate">IndoorPlateActivity</string>
-    <!--
-    This string is used for square devices and overridden by hello_world in
-    values-round/strings.xml for round devices.
-    -->
-    <string name="hello_world">Hello Square World!</string>
+    <string name="text_on">ON</string>
+    <string name="text_off">OFF</string>
 </resources>
